# managed-service-fixtures

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  noxfile.py  pyproject.toml  setup.cfg
.github/actions/setup-cockroach/: action.yaml
.github/actions/setup-redis/: action.yaml
.github/actions/setup-vault/: action.yaml
.github/workflows/: ci.yaml  publish.yaml
managed_service_fixtures/: __init__.py  base_manager.py
managed_service_fixtures/services/: cockroach.py  redis.py
scripts/: run_test_services.py
src/managed_service_fixtures/: __init__.py  base_manager.py  run_service_executor.py
src/managed_service_fixtures/services/: asgi_app.py  cockroach.py  fastapi.py  moto.py  redis.py  vault.py
tests/: test_asgi_app.py  test_cockroach.py  test_redis.py  test_vault.py
