[tool.poetry]
name = "managed-service-fixtures"
version = "0.1.0"
description = "Pytest fixtures to manage external services such as Cockroach DB, Vault, or Redis"
authors = ["Kafonek <matt.kafonek@noteable.io>"]
license = "BSD-3"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.0"
mirakuru = "^2.4.2"
pydantic = "^1.9.0"
pytest-xdist = "^2.5.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
black = "^22.1.0"
isort = "^5.10.1"
mypy = "^0.941"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
