[tool.poetry]
name = "managed_service_fixtures"
version = "0.1.1"
description = "Pytest fixtures to manage external services such as Cockroach DB, Vault, or Redis"
authors = ["Noteable Engineering <engineering-backend@noteable.io>"]
license = "BSD-3"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.0"
mirakuru = "^2.4.2"
pydantic = "^1.9.0"
pytest-xdist = "^2.5.0"
filelock = "^3.7.1"
pytest-asyncio = "^0.19.0"
importlib-metadata = "^4.12.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
black = "^22.1.0"
isort = "^5.10.1"
mypy = "^0.941"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
