[tool.poetry]
name = "managed_service_fixtures"
version = "0.1.4"
description = "Pytest fixtures to manage external services such as Cockroach DB, Vault, or Redis"
authors = ["Noteable Engineering <engineering-backend@noteable.io>"]
license = "BSD-3"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.0"
mirakuru = "^2.4.2"
pydantic = "^1.9.0"
pytest-xdist = "^2.5.0"
filelock = "^3.7.1"
pytest-asyncio = "^0.19.0"
importlib-metadata = "^4.12.0"
structlog = ">21"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
mypy = "^0.941"
flake8 = "^4.0.1"
hvac = "^0.11.2"
SQLAlchemy = "^1.4.39"
sqlalchemy-cockroachdb = "^1.4.3"
psycopg2-binary = "^2.9.3"
aioboto3 = "^9.6.0"
aioredis = "^2.0.1"
moto = {extras = ["server"], version = "^3.1.16"}
Faker = "^13.15.1"
pytest-faker = "^2.0.0"
asyncpg = "^0.26.0"
fastapi = "^0.79.0"
websockets = "^10.3"
uvicorn = "^0.18.2"
httpx = "^0.23.0"
nox = "^2022.1.7"
nox-poetry = "^1.0.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.isort]
known_first_party=["managed_service_fixtures"]
profile = "black"
